# data-linage-test

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
agent/: pyproject.toml
agent/chatbot/: agent.py  server.py
legal-agent-poc/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
legal-agent-poc/src/: agent.py  main.py  models.py  vectorstore.py
